@@ -2,6 +2,7 @@
 	* Require div2007 0.10.0
 	* Follow-up 12 to feature #34447: Avoid retrieving private key when no password is set
 	* Follow-up to feature #36191: Remove left over debugging code
+	* Follow-up 13 to feature #34447: Remove secured password from data array
 
 2012-04-20 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Remove global declarations from tx_srfeuserregister_tca
